overflow fix

--- a/src/stylesheets/components/_periodicTable.scss
+++ b/src/stylesheets/components/_periodicTable.scss
@@ -3,6 +3,7 @@
 
     .inline {
         position: relative;
+        width: 100%;
     }
 
     .table li {
